src/styles/index.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
@import url("/src/styles/balloon.css");

* {
  margin: 0;
  font-family: "Quicksand", sans-serif;
  color-scheme: dark;
}

:root {
  --background1: #1c1c1c;
  --background2: #161616;
  --background3: #333333;
  --background4: #282828;
  --background5: #121212;
  --background6: #aaaaaa;
  --background7: #888888;
  --green: #25ca6a;
  --orange: #ff9822;
  --darkorange: #ff5722;
  --pink: #c52d61;
  --red: #c52d2d;
  --purple: #673ab7;
  --ocean: #2196f3;
  --grey: #64676c;
}

button {
  cursor: pointer;
}

#root {
  width: 100%;
  min-height: 100vh;
}

input:focus {
  outline: none;
}

body {
  background-color: var(--background1);
}

.round1 {
  border-radius: 0.5rem;
}

.round2 {
  border-radius: 1rem;
}

.background1 {
  background-color: var(--background1);
}
.background2 {
  background-color: var(--background2);
}
.background3 {
  background-color: var(--background3);
}
.background4 {
  background-color: var(--background4);
}
.background5 {
  background-color: var(--background5);
}

.anchor1 {
  text-decoration: none;
  color: var(--background7);
}

.anchor1:hover {
  text-decoration: none;
  color: var(--background6);
}

div.row {
  display: flex;
}

div.row.center {
  flex-direction: row;
  justify-content: center;
}

.custombuttom {
  border: none;
  padding: 3px;
  color: white;
  background-color: var(--background3);
}

.react-contextmenu {
  background-color: var(--background4);
  background-clip: padding-box;
  border: 1px solid rgba(0, 0, 0, 0.15);
  border-radius: 0.25rem;
  color: #373a3c;
  font-size: 16px;
  margin: 2px 0 0;
  min-width: 160px;
  outline: none;
  opacity: 0;
  padding: 5px 0;
  pointer-events: none;
  text-align: left;
  transition: opacity 250ms ease !important;
}

.react-contextmenu.react-contextmenu--visible {
  opacity: 1;
  pointer-events: auto;
  z-index: 9999;
}

.react-contextmenu-item {
  background: 0 0;
  border: 0;
  color: #373a3c;
  cursor: pointer;
  font-weight: 400;
  line-height: 1.5;
  padding: 3px 20px;
  text-align: inherit;
  white-space: nowrap;
}

.react-contextmenu-item.react-contextmenu-item--active,
.react-contextmenu-item.react-contextmenu-item--selected {
  color: #fff;
  /* background-color: #20a0ff;
  border-color: #20a0ff; */
  text-decoration: none;
}

.react-contextmenu-item.react-contextmenu-item--disabled,
.react-contextmenu-item.react-contextmenu-item--disabled:hover {
  background-color: transparent;
  border-color: rgba(0, 0, 0, 0.15);
  color: #878a8c;
}

.react-contextmenu-item--divider {
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  cursor: inherit;
  margin-bottom: 3px;
  padding: 2px 0;
}
.react-contextmenu-item--divider:hover {
  background-color: transparent;
  border-color: rgba(0, 0, 0, 0.15);
}

.react-contextmenu-item.react-contextmenu-submenu {
  padding: 0;
}

.react-contextmenu-item.react-contextmenu-submenu * {
  color: #858585;
}

.react-contextmenu-item.react-contextmenu-submenu *:hover {
  color: #ffffff;
}

.react-contextmenu-item.react-contextmenu-submenu
  > .react-contextmenu-item:after {
  content: "▶";
  display: inline-block;
  position: absolute;
  right: 7px;
  color: #858585;
}

.react-contextmenu-item.react-contextmenu-submenu:hover
  > .react-contextmenu-item:after {
  content: "▶";
  display: inline-block;
  position: absolute;
  right: 7px;
  color: white;
}

/* .react-contextmenu.react-contextmenu--visible {
  padding: 5px;
  background: var(--background4);
  border-radius: 0.5rem;
  z-index: 99999999999999999999999999999999999999999;
  position: relative;
}

.react-contextmenu-item {
  padding: 10px 10px;
  margin: 2px 0px;
  min-width: 140px;
  cursor: pointer;
  border-radius: 0.5rem;
}

.react-contextmenu.react-contextmenu--visible
  .react-contextmenu-item:last-child {
  border-bottom: none;
} */

div.separator {
  width: 100%;
  min-height: 1px;
  height: 1px;
  background-color: var(--background3);
  margin: 10px 0px;
}

a {
  color: var(--ocean);
}

a:visited {
  color: var(--ocean);
}

a.queue {
  color: transparent;
  text-decoration: none;
}

a.queue:visited {
  color: transparent;
}

.loadingcontainer {
  width: 100%;
  height: 40vh;
  margin-top: auto;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-content: center;
  justify-content: center;
  align-items: center;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.loadingcontainer {
  font-weight: 500;
  font-size: 25px;
  margin-top: 10px;
}

.loadingcontainer .patchouli {
  width: 190px;
  height: 190px;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  background-image: url(/src/static/images/patiole.png);
  animation: spin 2000ms linear infinite;
}

footer {
  width: 100%;
  height: 90px;
  background-color: var(--background2);
  border-top: 1px solid var(--background3);
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: center;
  justify-content: center;
  align-items: center;
  position: relative;
  top: 50%;
  bottom: 0;
}

input[type="text"] {
  border: none;
  padding: 3px;
  border-radius: 3px;
}

input[type="number"] {
  border: none;
  padding: 3px;
  border-radius: 3px;
}

footer span {
  margin: 0px 5px;
  color: var(--red);
}

footer a {
  margin-left: 5px;
}

.SnackbarItem-action button {
  padding: 7px;
  background-color: transparent;
  border: none;
  color: white;
  font-weight: 700;
}

.customscroll::-webkit-scrollbar {
  width: 10px;
  border-radius: 5px;
}

.customscroll::-webkit-scrollbar-track {
  width: 10px;
  border-radius: 5px;
  background-color: var(--background2);
}

.customscroll::-webkit-scrollbar-thumb {
  width: 10px;
  border-radius: 5px;
  background-color: var(--background3);
}

